--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header) 
-name: Deepak Rishi 
+name: Dan Wang 
  
 # Short bio or description (displayed in the header)
 description: Grad Student at University of Waterloo   
@@ -17,12 +17,12 @@ description: Grad Student at University of Waterloo
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: drishi@uwaterloo.ca
+  email: d97wang@uwaterloo.ca
   facebook:
   flickr:
-  github: deerishi
+  github: danwangkoala
   instagram:
-  linkedin: deepak-rishi-182b8657
+  linkedin: dan-wang-089935b0
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
